@startuml survey
class PageItem {
    +wording: string
    +variableName: string
    +type: ItemType
    +section: string
}
interface Rule {
    +execute(...answers: Values[]): Values[]
}
class CrossItemRule {
}
class Page {
    +name: string
}
class PageSet {
    +type: string
}
class Survey {
    +name: string
}
PageItem o-- "n" Rule
Page *-- "n" PageItem
Page *-- "n" Page
PageSet o--> "n" Page
Survey *-- "n" PageSet
Survey *-- "n" Page
Survey *-- "n" CrossItemRule
CrossItemRule o-- "n" PageItem
CrossItemRule o-- "1" Rule
hide methods
hide CrossItemRule fields
hide Rule fields
show Rule methods
@enduml